@@ -12,6 +12,7 @@ import it.pagopa.selfcare.mscore.constant.RelationshipState;
 import it.pagopa.selfcare.mscore.core.UserEventService;
 import it.pagopa.selfcare.mscore.core.UserRelationshipService;
 import it.pagopa.selfcare.mscore.core.UserService;
+import it.pagopa.selfcare.mscore.model.QueueEvent;
 import it.pagopa.selfcare.mscore.model.UserNotificationToSend;
 import it.pagopa.selfcare.mscore.model.onboarding.OnboardingInfo;
 import it.pagopa.selfcare.mscore.model.user.RelationshipInfo;
@@ -22,9 +23,7 @@ import it.pagopa.selfcare.mscore.web.model.mapper.OnboardingMapper;
 import it.pagopa.selfcare.mscore.web.model.mapper.RelationshipMapper;
 import it.pagopa.selfcare.mscore.web.model.mapper.UserMapper;
 import it.pagopa.selfcare.mscore.web.model.onboarding.OnboardingInfoResponse;
-import it.pagopa.selfcare.mscore.web.model.user.UserProductsResponse;
-import it.pagopa.selfcare.mscore.web.model.user.UserResponse;
-import it.pagopa.selfcare.mscore.web.model.user.UsersNotificationResponse;
+import it.pagopa.selfcare.mscore.web.model.user.*;
 import it.pagopa.selfcare.mscore.web.util.CustomExceptionMessage;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -32,9 +31,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static it.pagopa.selfcare.mscore.constant.GenericError.*;
@@ -277,7 +274,7 @@ public class UserController {
                                            @PathVariable("id") String userId,
                                            @ApiParam("${swagger.mscore.institutions.model.institutionId}")
                                            @RequestParam(value = "institutionId") String institutionId) {
-        userEventService.sendUpdateUserNotificationToQueue(userId, institutionId);
+        userEventService.sendUserNotificationToQueue(userId, institutionId, QueueEvent.UPDATE);
         return ResponseEntity.noContent().build();
     }
 
@@ -301,9 +298,26 @@ public class UserController {
                                                               @RequestParam(name = "productId", required = false) String productId) {
         List<UserNotificationToSend> users = userService.findAll(size, page, productId);
         UsersNotificationResponse userNotificationResponse = new UsersNotificationResponse();
-        userNotificationResponse.setUsers(users.stream()
+        List<UserNotificationResponse> usersNotification = users.stream()
                 .map(userMapper::toUserNotification)
-                .collect(Collectors.toList()));
+                .toList();
+
+        Map<String, List<UserNotificationResponse>> userNotificationMap = new HashMap<>();
+
+        for (UserNotificationResponse userNotification : usersNotification) {
+            if (userNotificationMap.containsKey(userNotification.getUser().getUserId())) {
+                userNotificationMap.get(userNotification.getUser().getUserId()).add(userNotification);
+            } else {
+                List<UserNotificationResponse> usersNotificationResponse = new ArrayList<>();
+                usersNotificationResponse.add(userNotification);
+                userNotificationMap.put(userNotification.getUser().getUserId(), usersNotificationResponse);
+            }
+        }
+
+        userNotificationResponse.setUsers(userNotificationMap.values().stream()
+                        .map(UserNotificationBindingsResponse::new)
+                        .toList());
+
         return ResponseEntity.ok(userNotificationResponse);
     }
 
